<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:strokeWidth="1dp"
    app:strokeColor="@android:color/darker_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/TextViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/nama_lengkap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TextViewAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/usia"
            app:layout_constraintTop_toBottomOf="@+id/TextViewName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/TextViewPosition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/jabatan"
            app:layout_constraintTop_toBottomOf="@+id/TextViewAge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/TextViewSkills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/keahlian"
            app:layout_constraintTop_toBottomOf="@+id/TextViewPosition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/TextViewGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/gender"
            app:layout_constraintTop_toBottomOf="@+id/TextViewSkills"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ImageViewDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>